--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
     <head>
         <title>Minha Página</title>
         <meta charset="utf-8">
+        <script type="text/javascript" src="js/main.js"></script>
     </head>
     <body>
-        <h1>Minha Página</h1>
-        <script>alert("Hello, World!");</script>        
+        <h1>Minha Página</h1>       
     </body>
 </html>
